fix(reporte-funcionamiento): adjust layout widths for better alignment and responsiveness

--- a/src/app/components/reporte-funcionamiento/reporte-funcionamiento.component.scss
+++ b/src/app/components/reporte-funcionamiento/reporte-funcionamiento.component.scss
@@ -335,7 +335,7 @@
           font-size: 24px;
           margin-top: 10rem;
           color: rgb(71, 69, 69);
-          width: 22em;
+          width: 38%;
         }
 
         .chart-icon {
